fixing map on map page not being able to fill page without overflowing

--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -10,6 +10,6 @@
 }
 
 .mainContent {
-  margin: 0 auto;
+  margin-bottom: auto;
   max-width: 1140px;
 }
